--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -21,7 +21,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.abundatrade.android_app_abundatrade.Login"
-            android:label="@string/title_activity_login" >
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/title_activity_login"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -42,7 +44,9 @@
         </activity>
         <activity
             android:name="com.abundatrade.android_app_abundatrade.LookupAndAdd"
-            android:label="@string/title_activity_lookup_and_add" >
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/title_activity_lookup_and_add"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
