--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,6 +15,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -25,7 +26,7 @@
             android:name="com.abundatrade.android_app_abundatrade.Login"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,18 +38,10 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.abundatrade.android_app_abundatrade.CameraPreview"
-            android:label="@string/title_activity_camera_preview"
-            android:parentActivityName="com.abundatrade.android_app_abundatrade.CameraScan" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.abundatrade.android_app_abundatrade.CameraScan" />
-        </activity>
-        <activity
             android:name="com.abundatrade.android_app_abundatrade.LookupAndAdd"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/title_activity_lookup_and_add"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="landscape" >
         </activity>
     </application>
 
