--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.abundatrade.android_app_abundatrade"
-    android:versionCode="010101"
-    android:versionName="1.1.1" >
+    package="com.abundatrade.android_app_abundatrade2"
+    android:versionCode="010110"
+    android:versionName="1.1.2" >
 
     <uses-sdk
         android:minSdkVersion="8"
@@ -29,7 +29,6 @@
             android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
